--- a/src/utils/styles/global.scss
+++ b/src/utils/styles/global.scss
@@ -112,7 +112,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 5;
+    z-index: 2;
     .tooltip_arrow {
         border: 5px solid transparent;
     }
